update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RafflePanda-contract",
+  "name": "raffle-panda-contract",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
